ipax-pxa270.conf: prefer handhelds-pxa-2.6_2.6.15-hh1. remove dependency on hx4700_wlan.

--- a/org.handhelds.familiar/conf/machine/ipaq-pxa270.conf
+++ b/org.handhelds.familiar/conf/machine/ipaq-pxa270.conf
@@ -5,7 +5,7 @@
 TARGET_ARCH = "arm"
 IPKG_ARCHS = "all arm armv4 armv5te ipaqpxa hx4700"
 PREFERRED_PROVIDER_virtual/kernel = "handhelds-pxa-2.6"
-PREFERRED_VERSIONS_handhelds-pxa-2.6 = "2.6.12-hh3"
+PREFERRED_VERSION_handhelds-pxa-2.6 = "2.6.15-hh1"
 
 PREFERRED_VERSION_orinoco-modules = "0.15rc1"
 
@@ -35,7 +35,7 @@ include conf/machine/tune-strongarm.conf
 
 BOOTSTRAP_EXTRA_RDEPENDS += "${@linux_module_packages('${HX4700_MODULES}', d)}"
 HX4700_MODULES = "i2c-pxa asic3_mmc hx4700_bt hx4700_leds hx4700_navpt hx4700_pcmcia \
-                  hx4700_ts hx4700_wlan snd_hx4700_audio hx4700_power"
+                  hx4700_ts snd_hx4700_audio hx4700_power"
 
 module_autoload_hx4700_power = "hx4700_power"
 module_autoload_pcmcia = "pcmcia"
