h2200.conf: call make_zimage_symlink_relative to fix booting from LAB.

--- a/org.handhelds.familiar/conf/machine/h2200.conf
+++ b/org.handhelds.familiar/conf/machine/h2200.conf
@@ -39,3 +39,6 @@ GPE_EXTRA_DEPENDS += "gaim gpe-filemanager"
 GPE_EXTRA_INSTALL += "gaim gpe-filemanager"
 
 include conf/machine/tune-strongarm.conf
+
+# LAB can only resolve relative symlinks
+ROOTFS_POSTPROCESS_COMMAND += "make_zimage_symlink_relative; "
