--- a/org.handhelds.familiar/conf/machine/simpad.conf
+++ b/org.handhelds.familiar/conf/machine/simpad.conf
@@ -41,10 +41,10 @@ SERIAL_CONSOLE = "ttySA0 115200 vt100"
 
 USE_DEVFS = "1"
 GUI_MACHINE_CLASS = "bigscreen"
-ROOT_FLASH_SIZE = "24"
+ROOT_FLASH_SIZE = "16"
 USE_VT = "0"
-GPE_EXTRA_DEPENDS += "gaim sylpheed suspend-desktop"
-GPE_EXTRA_INSTALL += "gaim sylpheed suspend-desktop"
+GPE_EXTRA_DEPENDS += "suspend-desktop"
+GPE_EXTRA_INSTALL += "suspend-desktop"
 
 include conf/machine/handheld-common.conf
 include conf/machine/tune-strongarm.conf
