familiar-0.8.4.conf: inherit simplepremirror.bbclass and set SIMPLE_PREMIRROR
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -5,6 +5,9 @@ DISTRO_VERSION = "v0.8.4-rc2"
 include conf/distro/familiar.conf
 include conf/distro/familiar-feeds.inc
 
+INHERIT += "simplepremirror"
+SIMPLE_PREMIRROR = "http://familiar.handhelds.org/source/v0.8.4-rc2/sources/"
+
 
 DISTRO_TYPE = "release"
 
