--- a/org.handhelds.familiar/conf/machine/h6300.conf
+++ b/org.handhelds.familiar/conf/machine/h6300.conf
@@ -10,15 +10,23 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-h6300-omap1"
 PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}depmod:module-init-tools-cross"
 
-H6300_MODULES = "omapts i2c-omap pca9535 omap-keypad bluetooth rfcomm bnep l2cap hci_uart h6300_bt"
+H6300_MODULES	= "omapts omap-keypad bluetooth rfcomm bnep l2cap hci_uart h6300_bt i2c-dev"
+#common alsa sound modules
+H6300_MODULES  += "snd snd_timer snd_pcm snd_seq_device snd_seq_midi_event snd_page_alloc"
+#h6300 specific alsa sound module
+H6300_MODULES  += "snd-omap-alsa-tsc2101"
+#oss compatibility alsa sound modules
+H6300_MODULES  += "snd_pcm_oss snd_mixer_oss snd_seq_oss"
 
 module_autoload_omapts = "omapts"
-module_autoload_i2c-omap = "i2c-omap"
-module_autoload_pca9535 = "pca9535"
 module_autoload_omap-keypad = "omap-keypad"
 module_autoload_hci_uart = "hci_uart"
 module_autoload_h6300_bt = "h6300_bt"
 module_autoload_l2cap = "l2cap"
+#common alsa sound modules
+module_autoload_snd-omap-alsa-tsc2101 = "snd-omap-alsa-tsc2101"
+module_autoload_snd-pcm-oss = "snd-pcm-oss"
+module_autoload_snd-mixer-oss = "snd-mixer-oss"
 
 BOOTSTRAP_EXTRA_DEPENDS += "virtual/kernel udev sysfsutils console-tools module-init-tools"
 BOOTSTRAP_EXTRA_DEPENDS += "apmd alsa-utils"
