familiar.conf, familiar-0.8.4.conf, local.conf.sample: tweak defaults for CVS_TARBALL_STASH, BBINCLUDELOGS
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -5,8 +5,10 @@ DISTRO_VERSION = "v0.8.4-rc2"
 include conf/distro/familiar.conf
 include conf/distro/familiar-feeds.inc
 
+#always try downloading from handhelds.org first
 INHERIT += "simplepremirror"
-SIMPLE_PREMIRROR = "http://familiar.handhelds.org/source/v0.8.4-rc2/sources/"
+SIMPLE_PREMIRROR = "http://familiar.handhelds.org/source/${DISTRO_VERSION}/sources/"
+CVS_TARBALL_STASH = "http://familiar.handhelds.org/source/${DISTRO_VERSION}/sources/"
 
 
 DISTRO_TYPE = "release"
