--- a/org.handhelds.familiar/conf/distro/familiar.conf
+++ b/org.handhelds.familiar/conf/distro/familiar.conf
@@ -19,3 +19,6 @@ UDEV_DEVFS_RULES = "1"
 DISTRO_CHECK := "${@bb.data.getVar("DISTRO_VERSION",d,1) or bb.fatal('Remove this line or set a dummy DISTRO_VERSION if you really want to build an unversioned distro')}"
 
 include classes/multimachine.inc
+
+# be more verbose by default
+BBINCLUDELOGS = "yes"
