familiar.conf, familiar-0.8.4.conf: use ?= for previous set of changes
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar.conf
+++ b/org.handhelds.familiar/conf/distro/familiar.conf
@@ -21,4 +21,4 @@ DISTRO_CHECK := "${@bb.data.getVar("DISTRO_VERSION",d,1) or bb.fatal('Remove thi
 include classes/multimachine.inc
 
 # be more verbose by default
-BBINCLUDELOGS = "yes"
+BBINCLUDELOGS ?= "yes"
