familiar.conf: set default value for IMAGE_FSTYPES
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar.conf
+++ b/org.handhelds.familiar/conf/distro/familiar.conf
@@ -11,6 +11,7 @@ TARGET_OS = "linux"
 BOOTSTRAP_EXTRA_DEPENDS += "familiar-version"
 BOOTSTRAP_EXTRA_RDEPENDS += "libgcc1 familiar-version"
 IMAGE_NAME = "${IMAGE_BASENAME}-${DISTRO_VERSION}-${MACHINE}"
+IMAGE_FSTYPES ?= "jffs2 tar"
 
 ENABLE_BINARY_LOCALE_GENERATION ?= "1"
 PARALLEL_INSTALL_MODULES = "1"
