Add a setup utility. Also move some more configuration bits around.
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -16,10 +16,6 @@ DISTRO_TYPE = "release"
 
 CVSDATE = 20051212
 
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}gcc-initial:gcc-cross-initial"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}gcc:gcc-cross"
-PREFERRED_PROVIDERS += "virtual/${TARGET_PREFIX}g++:gcc-cross"
-
 PREFERRED_PROVIDER_virtual/libiconv=glibc
 PREFERRED_PROVIDER_virtual/libintl=glibc
 PREFERRED_PROVIDER_x11=diet-x11
@@ -68,10 +64,9 @@ ZKERNEL_VERSION_tosa   = "2.4"
 # Opie
 #
 
-PREFERRED_PROVIDERS += " virtual/libqpe:libqpe-opie"
-PREFERRED_VERSION_qte = "2.3.10"
-
+QTE_VERSION = "2.3.10"
 OPIE_VERSION = "1.2.1"
+
 include conf/distro/preferred-opie-versions.inc
 
 #
