--- a/org.handhelds.familiar/conf/distro/familiar.conf
+++ b/org.handhelds.familiar/conf/distro/familiar.conf
@@ -17,9 +17,16 @@ ENABLE_BINARY_LOCALE_GENERATION ?= "1"
 PARALLEL_INSTALL_MODULES = "1"
 UDEV_DEVFS_RULES = "1"
 
-DISTRO_CHECK := "${@bb.data.getVar("DISTRO_VERSION",d,1) or bb.fatal('Remove this line or set a dummy DISTRO_VERSION if you really want to build an unversioned distro')}"
-
-include classes/multimachine.inc
+# toolchain preferences
+PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}gcc-initial:gcc-cross-initial"
+PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}gcc:gcc-cross"
+PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}g++:gcc-cross"
 
 # be more verbose by default
 BBINCLUDELOGS ?= "yes"
+
+include classes/multimachine.inc
+
+
+# this file isn't supposed to be used directly
+DISTRO_CHECK := "${@bb.data.getVar("DISTRO_VERSION",d,1) or bb.fatal('Remove this line or set a dummy DISTRO_VERSION if you really want to build an unversioned distro')}"
