--- a/org.handhelds.familiar/conf/machine/ipaq-pxa270.conf
+++ b/org.handhelds.familiar/conf/machine/ipaq-pxa270.conf
@@ -5,7 +5,7 @@
 TARGET_ARCH = "arm"
 IPKG_ARCHS = "all arm armv4 armv5te ipaqpxa hx4700"
 PREFERRED_PROVIDER_virtual/kernel = "handhelds-pxa-2.6"
-PREFERRED_VERSION_handhelds-pxa-2.6 = "2.6.15-hh1"
+PREFERRED_VERSION_handhelds-pxa-2.6 = "2.6.15-hh2"
 
 PREFERRED_VERSION_orinoco-modules = "0.15rc1"
 
@@ -14,11 +14,15 @@ BOOTSTRAP_EXTRA_DEPENDS_append = " handhelds-pxa-2.6 udev module-init-tools"
 
 ROOT_FLASH_SIZE = "80"
 
+EXTRA_IMAGECMD_jffs2 = "; sumtool -i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
+                        -o ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs-summary.jffs2 \
+                        -e 256KiB -p"
+
 BOOTSTRAP_EXTRA_RDEPENDS = "kernel ipaq-boot-params ${@linux_module_packages('${PXA270_MODULES}', d)}"
 BOOTSTRAP_EXTRA_RDEPENDS_append = " udev module-init-tools"
 
-PXA270_MODULES = "g_ether g_file_storage g_serial pxa27x_udc \
-		  snd_pcm_oss snd_mixer_oss evdev mmc_block pcmcia hidp \
+PXA270_MODULES = "g_ether g_file_storage g_serial \
+		  snd_pcm_oss snd_mixer_oss acx \
 		  nls_cp437 nls_iso8859-1 nls_utf8"
 
 SERIAL_CONSOLE = "115200 ttyS0"
@@ -34,21 +38,15 @@ GPE_EXTRA_INSTALL += "gaim gpe-filemanager"
 include conf/machine/tune-strongarm.conf
 
 BOOTSTRAP_EXTRA_RDEPENDS += "${@linux_module_packages('${HX4700_MODULES}', d)}"
-HX4700_MODULES = "i2c-pxa asic3_mmc hx4700_bt hx4700_leds hx4700_navpt hx4700_pcmcia \
-                  hx4700_ts snd_hx4700_audio hx4700_power"
+HX4700_MODULES = "hx4700_bt snd_hx4700_audio hx4700_acx"
 
-module_autoload_hx4700_power = "hx4700_power"
-module_autoload_pcmcia = "pcmcia"
-module_autoload_hx4700_pcmcia = "hx4700_pcmcia"
-module_autoload_asic3_mmc = "asic3_mmc"
-module_autoload_mmc_block = "mmc_block"
-module_autoload_hx4700_ts = "hx4700_ts"
-module_autoload_hx4700_navpt = "hx4700_navpt"
+# bt can take a command-line no-led option
 module_autoload_hx4700_bt = "hx4700_bt"
+module_autoload_hx4700_acx = "hx4700_acx"
+module_autoload_acx = "acx"
 module_autoload_snd-hx4700_audio = "snd-hx4700_audio"
 module_autoload_snd-pcm-oss = "snd-pcm-oss"
 module_autoload_snd-mixer-oss = "snd-mixer-oss"
-module_autoload_pxa27x_udc = "pxa27x_udc"
 
 #FIXME: this should be controlled by a userspace utility later.
 module_autoload_g_ether = "g_ether"
