ipaq-pxa270.conf: set USE_VT = "0".
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/machine/ipaq-pxa270.conf
+++ b/org.handhelds.familiar/conf/machine/ipaq-pxa270.conf
@@ -25,6 +25,8 @@ PXA270_MODULES = "g_ether g_file_storage g_serial \
 		  snd_pcm_oss snd_mixer_oss acx \
 		  nls_cp437 nls_iso8859-1 nls_utf8"
 
+USE_VT = "0"
+
 SERIAL_CONSOLE = "115200 ttyS0"
 
 include conf/machine/ipaq-common.conf
