hostap-modules: add manfid for Pretec CompactWLAN card to hostap_cs.conf
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/packages/hostap/files/hostap_cs.conf
+++ b/org.handhelds.familiar/packages/hostap/files/hostap_cs.conf
@@ -55,9 +55,9 @@ card "HyperLink Wireless PC Card 11Mbps"
   version "HyperLink", "Wireless PC Card 11Mbps"
   bind "hostap_cs"
 
-# card "Intersil PRISM2 11 Mbps Wireless Adapter"
-#   manfid 0x0156, 0x0002
-#  bind "hostap_cs"
+card "Pretec CompactWLAN 802.11b"
+  manfid 0x0156, 0x0002
+  bind "hostap_cs"
 
 card "Intel PRO/Wireless 2011"
   manfid 0x0089, 0x0001
