hostap-modules: add version info to Pretec entry in hostap_cs.conf. based on an org.oe.oz354x commit by Marcin Juszkiewicz.
Author: hrw@openembedded.org
Branch: org.openembedded.oz354x
Revision: 9351f11b95efa7268bb7797f19769c8f42548c7a

Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/packages/hostap/files/hostap_cs.conf
+++ b/org.handhelds.familiar/packages/hostap/files/hostap_cs.conf
@@ -56,6 +56,7 @@ card "HyperLink Wireless PC Card 11Mbps"
   bind "hostap_cs"
 
 card "Pretec CompactWLAN 802.11b"
+  version "Pretec", "CompactWLAN Card 802.11b", "2.5"
   manfid 0x0156, 0x0002
   bind "hostap_cs"
 
