familiar-0.8.4.conf: this is Familiar v0.8.4.
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -1,6 +1,6 @@
 DISTRO = "familiar"
 DISTRO_NAME = "Familiar Linux"
-DISTRO_VERSION = "v0.8.4-rc3"
+DISTRO_VERSION = "v0.8.4"
 
 include conf/distro/familiar.conf
 include conf/distro/familiar-feeds.inc
