--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -1,6 +1,6 @@
 DISTRO = "familiar"
 DISTRO_NAME = "Familiar Linux"
-DISTRO_VERSION = "v0.8.4"
+DISTRO_VERSION = "v0.8.4.1-pre"
 
 include conf/distro/familiar.conf
 include conf/distro/familiar-feeds.inc
