--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -34,7 +34,8 @@ PREFERRED_VERSION_orinoco-modules_ipaq-pxa270 ?= "0.15"
 CVSDATE_handhelds-pxa-2.6 = "20051221"
 CVSDATE_LAB-kernel = "20060421"
 
-CVSDATE_gomunicator = "20060518"
+#CVSDATE_gomunicator = "20060518"
+CVSDATE_gomunicator = "20061108"
 
 #The CSL compiler is unusable because
 # 1) certain programs stop to compile
