--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -37,6 +37,9 @@ CVSDATE_LAB-kernel = "20060421"
 #CVSDATE_gomunicator = "20060518"
 CVSDATE_gomunicator = "20061108"
 
+CVSDATE_gconf-dbus ?= "20060719"
+CVSDATE_qemu-native ?= "20060723"
+
 #The CSL compiler is unusable because
 # 1) certain programs stop to compile
 # 2) more programs segfault
