--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -40,6 +40,8 @@ CVSDATE_gomunicator = "20061108"
 CVSDATE_gconf-dbus ?= "20060719"
 CVSDATE_qemu-native ?= "20060723"
 
+PREFERRED_VERSION_autoconf-native = "2.59"
+
 #The CSL compiler is unusable because
 # 1) certain programs stop to compile
 # 2) more programs segfault
