familiar: really fix SIMPLE_PREMIRROR, CVS_TARBALL_STASH. Thanks to Mika Laitio for spotting.
Signed-off-by: Rene Wagner <rw@handhelds.org>

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -7,8 +7,8 @@ include conf/distro/familiar-feeds.inc
 
 #always try downloading from handhelds.org first
 INHERIT += "simplepremirror"
-SIMPLE_PREMIRROR ?= "http://familiar.handhelds.org/source/0.8.4/sources/"
-CVS_TARBALL_STASH ?= "http://familiar.handhelds.org/source/0.8.4/sources/"
+SIMPLE_PREMIRROR ?= "http://familiar.handhelds.org/source/v0.8.4/sources/"
+CVS_TARBALL_STASH ?= "http://familiar.handhelds.org/source/v0.8.4/sources/"
 
 
 DISTRO_TYPE = "release"
