qemu: add cvs version from 20060723. bb files contain fix for building qemu with gcc 3.3 or 3.3.6 or 3.4 versions even if user has also the gcc 4.x installed. Patches received from openembedded repository.

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -44,6 +44,8 @@ PREFERRED_VERSION_gcc-cross ?= "3.4.4"
 PREFERRED_VERSION_gcc-cross-initial ?= "3.4.4"
 PREFERRED_VERSION_gcc-cross-sdk ?= "3.4.4"
 
+CVSDATE_qemu-native ?= "20060723"
+
 
 #
 # Machines section
