dbus-1.0.1: big update due to changes in DBUS API. Affected packages are: bluez-libs, bluez-utils, dbus, dbus-native, dbus-glib, dbus-glib-native, gnome-vfs-dbus, gomunicator, gpe-autostarter, gpe-beam, gpe-bluetooth.

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -46,6 +46,7 @@ PREFERRED_VERSION_gcc-cross-sdk ?= "3.4.4"
 
 CVSDATE_qemu-native ?= "20060723"
 
+CVSDATE_gconf-dbus ?= "20060719"
 
 #
 # Machines section
