Found a "premirror" with everything for v0.8.4.

--- a/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
+++ b/org.handhelds.familiar/conf/distro/familiar-0.8.4.conf
@@ -7,8 +7,8 @@ include conf/distro/familiar-feeds.inc
 
 #always try downloading from handhelds.org first
 INHERIT += "simplepremirror"
-SIMPLE_PREMIRROR ?= "http://familiar.handhelds.org/source/${DISTRO_VERSION}/sources/"
-CVS_TARBALL_STASH ?= "http://familiar.handhelds.org/source/${DISTRO_VERSION}/sources/"
+SIMPLE_PREMIRROR ?= "http://www.gtlib.gatech.edu/pub/familiar/source/${DISTRO_VERSION}/sources/"
+CVS_TARBALL_STASH ?= "http://www.gtlib.gatech.edu/pub/familiar/source/${DISTRO_VERSION}/sources/"
 
 
 DISTRO_TYPE = "release"
